--- a/index.html
+++ b/index.html
@@ -7,3 +7,35 @@ Challenge 4: When the form is submitted, get the user's response and add the sam
 -->
 
 <!-- your code goes below this comment -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HTML Form</title>
+</head>
+<body>
+  <label for="username">User Name : </label>
+  <input type="text" name="username" id="username">
+  <br>
+  <label for="phno">PhNo</label>
+  <input type="tel" id="phno" name="phno"></input>
+  <br>
+  <label for="anime">do you watch anime: </label>
+  <input type="radio" name="watch anime?" value="yes" id="yes">
+  <label for="yes">YES</label>
+  <input type="radio" name="watch anime?" value="no" id="no" >
+  <label for="no">NO</label><br>
+  <label for="bg">Blood Group</label>
+  <select name="bg" id="bg">blood group
+  <option value="o+ve">O+ve</option>
+  <option value="A+ve">A+ve</option>
+  <option value="AB+ve">AB+ve</option>
+  <option value=">O-ve">O-ve</option>
+  <option value="A1B+ve">A1B+ve</option>
+  <label for="done">done</label>
+  <input type="checkbox"></input>
+  </select>
+</body>
+</html>
