--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Challenge 4: When the form is submitted, get the user's response and add the sam
   <title>HTML Form</title>
 </head>
 <body>
-  <form action="/action_page.php" id="form1" method="POST">
+  <form action="/action_page.php" method="POST">
     <label for="username">User Name : </label>
     <input type="text" name="username" id="username">
     <br>
